@startuml
package "Domain" {
  class User {
    -id: int
    -username: string
    -email: string
    -password_hash: string
    -role: string
    +register()
    +login()
  }

  class Product {
    -id: int
    -name: string
    -price: float
    -stock: int
    +create()
    +update()
  }

  class Order {
    -id: int
    -user_id: int
    -product_id: int
    -quantity: int
    -status: string
    +place_order()
  }
}

package "Application" {
  class AuthService {
    +register_user()
    +login_user()
  }

  class ProductService {
    +create_product()
    +get_products()
    +update_product()
  }

  class OrderService {
    +place_order()
    +get_user_orders()
  }
}

package "Infrastructure" {
  class UserRepository {
    +save_user()
    +find_user_by_email()
  }

  class ProductRepository {
    +save_product()
    +find_product_by_id()
    +find_all_products()
  }

  class OrderRepository {
    +save_order()
    +find_orders_by_user()
  }
}

package "Presentation" {
  class AuthController {
    +register_endpoint()
    +login_endpoint()
  }

  class ProductController {
    +create_product_endpoint()
    +get_products_endpoint()
  }

  class OrderController {
    +place_order_endpoint()
    +get_orders_endpoint()
  }
}

UserRepository --> User
ProductRepository --> Product
OrderRepository --> Order
AuthService --> UserRepository
ProductService --> ProductRepository
OrderService --> OrderRepository
AuthController --> AuthService
ProductController --> ProductService
OrderController --> OrderService
@enduml